# the-grand-prix-cmake

./: CMakeLists.txt
src/: main.cpp
